--- a/templates/nodejs_pipeline.j2
+++ b/templates/nodejs_pipeline.j2
@@ -1,8 +1,8 @@
 pipeline {
     agent any
     parameters {
-        string(name: 'GIT_REPO', defaultValue: '{{ repo_url | default("https://github.com/yourusername/yourrepo.git") }}', description: 'Git Repository URL')
-        string(name: 'GIT_BRANCH', defaultValue: '{{ branch | default("main") }}', description: 'Branch to build')
+        string(name: 'GIT_REPO', defaultValue: 'https://github.com/yourusername/yourrepo.git', description: 'Git Repository URL')
+        string(name: 'GIT_BRANCH', defaultValue: 'main', description: 'Branch to build')
     }
     options {
         timeout(time: 1, unit: 'HOURS')
@@ -69,7 +69,9 @@ pipeline {
         stage('Helm Deploy') {
             steps {
                 script {
-                    sh 'helm upgrade --install ${job_name} ./helm-chart --namespace yournamespace --set image.tag=${docker_image}'
+                    withKubeConfig([credentialsId: 'my-AKS-cred']) {
+                        sh 'helm upgrade --install ${job_name} ./helm-chart --namespace yournamespace --set image.tag=${docker_image}'
+                    }
                 }
             }
         }
