--- a/templates/nodejs_pipeline.j2
+++ b/templates/nodejs_pipeline.j2
@@ -3,6 +3,8 @@ pipeline {
     parameters {
         string(name: 'GIT_REPO', defaultValue: 'https://github.com/yourusername/yourrepo.git', description: 'Git Repository URL')
         string(name: 'GIT_BRANCH', defaultValue: 'main', description: 'Branch to build')
+        string(name: 'BUILD_TOOL', defaultValue: 'npm', description: 'Build Tool (npm/yarn)')
+        string(name: 'NAMESPACE', defaultValue: 'yournamespace', description: 'Namespace to deploy to')
     }
     options {
         timeout(time: 1, unit: 'HOURS')
@@ -29,7 +31,13 @@ pipeline {
         stage('Build') {
             steps {
                 script {
-                    sh 'npm install'
+                    if (params.BUILD_TOOL == 'npm') {
+                        sh 'npm install'
+                    } else if (params.BUILD_TOOL == 'yarn') {
+                        sh 'yarn install'
+                    } else {
+                        error 'Invalid build tool specified'
+                    }
                 }
             }
         }
@@ -41,7 +49,7 @@ pipeline {
                         FROM node:16
                         WORKDIR /app
                         COPY package*.json ./
-                        RUN npm install
+                        RUN ${params.BUILD_TOOL} install
                         COPY . .
                         ENTRYPOINT ["npm", "start"]
                         ''')
@@ -65,16 +73,12 @@ pipeline {
                 }
             }
         }
-        {% if deploy == true %}
         stage('Helm Deploy') {
             steps {
                 script {
-                    withKubeConfig([credentialsId: 'my-AKS-cred']) {
-                        sh 'helm upgrade --install ${job_name} ./helm-chart --namespace yournamespace --set image.tag=${docker_image}'
-                    }
+                    sh "helm upgrade --install ${job_name} ./helm-chart --namespace ${params.NAMESPACE} --set image.tag=${docker_image}"
                 }
             }
         }
-        {% endif %}
     }
 }
