--- a/templates/nodejs_pipeline.j2
+++ b/templates/nodejs_pipeline.j2
@@ -1,10 +1,10 @@
 pipeline {
     agent any
     parameters {
-        string(name: 'GIT_REPO', defaultValue: 'https://github.com/yourusername/yourrepo.git', description: 'Git Repository URL')
-        string(name: 'GIT_BRANCH', defaultValue: 'main', description: 'Branch to build')
-        string(name: 'BUILD_TOOL', defaultValue: 'npm', description: 'Build Tool (npm/yarn)')
-        string(name: 'NAMESPACE', defaultValue: 'yournamespace', description: 'Namespace to deploy to')
+        string(name: 'GIT_REPO', defaultValue: '{{ repo_url }}', description: 'Git Repository URL')
+        string(name: 'GIT_BRANCH', defaultValue: '{{ branch }}', description: 'Branch to build')
+        string(name: 'BUILD_TOOL', defaultValue: '{{ build_tool }}', description: 'Build Tool (npm/yarn)')
+        string(name: 'NAMESPACE', defaultValue: '{{ namespace }}', description: 'Namespace to deploy to')
     }
     options {
         timeout(time: 1, unit: 'HOURS')
