--- a/templates/java_pipeline.j2
+++ b/templates/java_pipeline.j2
@@ -7,29 +7,18 @@ pipeline {
         string(name: 'DOCKER_IMAGE', defaultValue: 'my-docker-image', description: 'Docker Image')
         string(name: 'DOCKER_TAG', defaultValue: 'latest', description: 'Docker Tag')
         string(name: 'DOCKERHUB_CREDENTIALS_ID', defaultValue: 'dockerhub-credentials', description: 'Docker Hub Credentials ID')
-        string(name: 'NAMESPACE', defaultValue: '{{ namespace }}', description: 'Namespace to deploy to')  
-        string(name: 'JOB_NAME', defaultValue: 'my-job-name', description: 'Job Name')
-  }
-    options {
-        timeout(time: 1, unit: 'HOURS')
-        disableConcurrentBuilds()
-        buildDiscarder(logRotator(numToKeepStr: '10'))
-        timestamps()
-        githubProjectProperty(
-            displayName: '',
-            projectUrlStr: '${params.GIT_REPO}'
-        )
+        string(name: 'NAMESPACE', defaultValue: '{{ namespace }}', description: 'Namespace to deploy to')
+        string(name: 'JOB_NAME', defaultValue: 'test', description: 'Job Name')
     }
-    def job_name = "${JOB_NAME}"
-    def commit_hash = "${env.GIT_COMMIT.substring(0, 7)}"
-    def build_number = "${env.BUILD_NUMBER}"
-    def docker_image = "${DOCKER_IMAGE}:${commit_hash}-${build_number}-${DOCKER_TAG}"
+    tools {
+        maven 'maven3.9.6'
+    }
     stages {
         stage('Checkout') {
             steps {
                 echo 'Checking out source code from Git repository...'
                 script {
-                    git (url: "${params.GIT_REPO}", branch: "${params.GIT_BRANCH}")
+                    git url: "${params.GIT_REPO}", branch: "${params.GIT_BRANCH}"
                 }
             }
         }
@@ -38,7 +27,7 @@ pipeline {
                 echo 'Building the application...'
                 script {
                     if (params.BUILD_TOOL == 'maven') {
-                        sh 'mvn clean install'
+                        sh 'mvn clean package'
                     } else if (params.BUILD_TOOL == 'gradle') {
                         sh 'gradle build'
                     } else {
@@ -46,20 +35,30 @@ pipeline {
                     }
                 }
             }
+            post {
+                success {
+                    archiveArtifacts 'target/*.war' // Archive the built WAR files
+                }
+            }
         }
         stage('Create Docker Image') {
             steps {
                 script {
-                    if (!fileExists('Dockerfile')) {
-                        writeFile(file: 'Dockerfile', text: '''
-                        FROM openjdk:17-jdk-slim
-                        WORKDIR /app
-                        COPY ${params.BUILD_TOOL == 'maven' ? 'target/*.jar' : 'build/libs/*.jar'} app.jar
-                        ENTRYPOINT ["java", "-jar", "app.jar"]
-                        ''')
+                    def dockerfileContent = '''
+                    FROM openjdk:17-jdk-slim
+                    WORKDIR /app
+                    '''
+                    if (params.BUILD_TOOL == 'maven') {
+                        dockerfileContent += 'COPY target/*.war app.war\n'
+                    } else if (params.BUILD_TOOL == 'gradle') {
+                        dockerfileContent += 'COPY build/libs/*.war app.war\n'
                     } else {
-                        echo 'Dockerfile already exists'
+                        error 'Invalid build tool specified'
                     }
+
+                    dockerfileContent += 'ENTRYPOINT ["java", "-jar", "app.war"]'
+
+                    writeFile file: 'Dockerfile', text: dockerfileContent
                 }
             }
         }
@@ -67,9 +66,17 @@ pipeline {
             steps {
                 echo 'Building Docker image...'
                 script {
+                    def dockerBuildArgs = ''
+                    if (params.BUILD_TOOL == 'maven') {
+                        dockerBuildArgs = "--build-arg WAR_FILE=target/*.war"
+                    } else if (params.BUILD_TOOL == 'gradle') {
+                        dockerBuildArgs = "--build-arg WAR_FILE=build/libs/*.war"
+                    }
                     withCredentials([usernamePassword(credentialsId: params.DOCKERHUB_CREDENTIALS_ID, usernameVariable: 'DOCKERHUB_USERNAME', passwordVariable: 'DOCKERHUB_PASSWORD')]) {
-                        sh "docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD"
-                        sh "docker build -t ${docker_image} ."
+                        def buildStatus = sh(script: "docker build -t ${DOCKERHUB_USERNAME}/${params.DOCKER_IMAGE}:${params.DOCKER_TAG} ${dockerBuildArgs} .", returnStatus: true)
+                        if (buildStatus != 0) {
+                            error 'Failed to build Docker image'
+                        }
                     }
                 }
             }
@@ -80,7 +87,10 @@ pipeline {
                 script {
                     withCredentials([usernamePassword(credentialsId: params.DOCKERHUB_CREDENTIALS_ID, usernameVariable: 'DOCKERHUB_USERNAME', passwordVariable: 'DOCKERHUB_PASSWORD')]) {
                         sh "docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD"
-                        sh "docker push ${docker_image}"
+                        def pushStatus = sh(script: "docker push ${DOCKERHUB_USERNAME}/${params.DOCKER_IMAGE}:${params.DOCKER_TAG}", returnStatus: true)
+                        if (pushStatus != 0) {
+                            error 'Failed to push Docker image'
+                        }
                     }
                 }
             }
@@ -89,7 +99,7 @@ pipeline {
             steps {
                 echo 'Deploying application using Helm...'
                 script {
-                    sh "helm upgrade --install ${job_name} ./helm-chart --namespace ${params.NAMESPACE} --set image.tag=${docker_image}"
+                    sh "helm upgrade --install ${params.JOB_NAME} ./helm-chart --namespace ${params.NAMESPACE} --set image.tag=${params.DOCKER_IMAGE}:${params.DOCKER_TAG}"
                 }
             }
         }
